# artifacts/api-server/src/routes/index.ts
@@ -3,14 +3,14 @@ import healthRouter from "./health";
 import requestsRouter from "./requests";
 import adminRouter from "./admin";
 import authRouter from "./auth";
-import { adminAuth } from "../middlewares/adminAuth";
+import mapConfigRouter from "./mapConfig";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(requestsRouter);
 router.use(authRouter);
-router.use("/admin", adminAuth);
+router.use(mapConfigRouter);
 router.use(adminRouter);
 
 export default router;
